fixed overlapping of text and arrows
git-svn-id: https://svn.syslab.com/svn/syslabcom/recensio.theme/trunk@9586 51ee9ba4-e84d-4896-84de-354f1821c169

--- a/recensio/theme/browser/stylesheets/main.css
+++ b/recensio/theme/browser/stylesheets/main.css
@@ -633,6 +633,9 @@ div#browsing-menu .used_facet {
     font-weight: bold !important;
     text-decoration: underline;
 }
+.template-browse-topics .submenu_title span {
+    padding-right: 9px;
+}
 .template-browse-topics .submenu_title {
     background-image: url("++resource++recensio.theme.images/more_arrow.png");
     background-position: 178px 7px;
